// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamList component renders correctly 1`] = `
<div>
  <div>
    <div
      class="EqualHeights-module_EqualHeights__62pC0"
    >
      <div
        class="MuiGrid-root Grid-module_Grid--justifyContent__EK865 MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-center"
      >
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TeamList component renders correctly when incomplete 1`] = `
<div>
  <div>
    <div
      class="EqualHeights-module_EqualHeights__62pC0"
    >
      <div
        class="MuiGrid-root Grid-module_Grid--justifyContent__EK865 MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-center"
      >
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiAvatar-fallback"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TeamList component renders correctly with links 1`] = `
<div>
  <div>
    <div
      class="EqualHeights-module_EqualHeights__62pC0"
    >
      <div
        class="MuiGrid-root Grid-module_Grid--justifyContent__EK865 MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-center"
      >
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
            <div
              class="ProfileCard-module_footer__ATrRo"
            >
              <span
                class="ProfileCard-module_row__guFc7"
              >
                Contact us
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TeamList component renders correctly with more than 8 1`] = `
<div>
  <div>
    <div
      class="EqualHeights-module_EqualHeights__62pC0"
    >
      <div
        class="MuiGrid-root Grid-module_Grid--justifyContent__EK865 MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-center"
      >
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="ProfileCard-module_ProfileCard__dt4VU"
          >
            <div
              class="ProfileCard-module_head__O89e2"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular ProfileCard-module_profile-picture__oLH56 MuiAvatar-colorDefault"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
            <div
              class="EqualHeights-module_content-box__wmtYX"
            >
              <div
                class="ProfileCard-module_body__et0Qn"
                style="height: auto;"
              >
                <div>
                  <strong
                    class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    Name
                  </strong>
                  <p
                    class="MuiTypography-root ProfileCard-module_title__3umXK Typography-module_Typography__aA2Zb MuiTypography-body2"
                  >
                    Job Title
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
